# wifi-captive-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  build_balena.sh  build_microos.sh  experiments.txt  readme.md  rustfmt.toml
.cargo/: config
.github/workflows/: ci.yml  style.yml  test.yml
balena/: config.json
dbus-rs-2019-11-21/: Cargo.toml
dbus-rs-2019-11-21/src/: nonblock.rs
dbus-rs-copy/: Cargo.toml
dbus-rs-copy/src/: channel.rs  lib.rs  message.rs  nonblock.rs
dbus-rs-copy/src/arg/: mod.rs
dbus-rs/dbus-codegen/src/: generate.rs
dbus-rs/dbus/src/: nonblock.rs
dbus-rs/dbus/src/nonblock/: generated_org_freedesktop_dbus.rs  generated_org_freedesktop_notifications.rs
doc/: dbus_monitor_sniffing.md  dbus_monitor_sniffing.txt  deployment.md  maintenance_team.md  required_dbus_changes.md
examples/: connect.rs  hotspot.rs  watch_connectivity.rs
examples/shared/: mod.rs
opensuse-microos/: ignition.firstboot  user-data
scripts/: build.sh  build_dbus.sh  config.h  dbus-1.pc  dbus-arch-deps.h  deploy.sh  readme.md  set_net_cap.c
src/: config.rs  errors.rs  lib.rs  main.rs  portal.rs  state_machine.rs  utils.rs
src/dhcp_server/: LICENSE  mod.rs  options.rs  packet.rs
src/dns_server/: dns_header.rs  dns_packet.rs  dns_record.rs  mod.rs
src/http_server/: file_serve.rs  mod.rs  sse.rs
src/network_backend/: mod.rs
src/network_backend/iwd/: access_points_changed.rs  connectivity.rs  find_wifi_device.rs  mod.rs
src/network_backend/nm/: access_points_changed.rs  connectivity.rs  device_state_type.rs  find_connection.rs  find_wifi_device.rs  hotspot.rs  mod.rs  security.rs  wifi_settings.rs
src/network_interface/: connection.rs  dbus_tokio.rs  mod.rs  signal_stream.rs
src/nm/: connectivity.rs  security.rs
tests/: left_over_println.sh
ui/css/: custom.css  pure-min.css
ui/js/: index.js
wifi-connect/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  readme.md  required_dbus_changes.md
wifi-connect/_examples/: nm_create.rs  nm_hotspot.rs
wifi-connect/dbus-rs-copy/: Cargo.toml
wifi-connect/dbus-rs-copy/src/: blocking.rs  channel.rs  nonblock.rs
wifi-connect/examples/: connect.rs  hotspot.rs  nm_create.rs  nm_hotspot.rs  watch_connectivity.rs
wifi-connect/examples/shared/: mod.rs
wifi-connect/old/: mod.rs  network_manager_helper.rs  server.rs  wifi.rs
wifi-connect/old/network_manager/: mod.rs  nm.rs  nm_state.rs  utils.rs
wifi-connect/old/network_manager/connection/: ssid.rs  state.rs  wifi_settings.rs
wifi-connect/old/network_manager/dbus/: dbus_wrapper.rs  mod.rs  service.rs
wifi-connect/old/network_manager/device/: ethernet.rs  mod.rs  state.rs  wifi.rs  wifi_ap.rs  wifi_sta.rs
wifi-connect/scripts/: raspbian-install.sh  start.sh
wifi-connect/src/: config.rs  dnsmasq.rs  errors.rs  exit.rs  lib.rs  main.rs  network.rs  server.rs  state_machine.rs  state_machine_portal_helper.rs  utils.rs
wifi-connect/src/dhcp_server/: mod.rs  options.rs  packet.rs
wifi-connect/src/dns_server/: byte_buffer.rs  dns_header.rs  dns_packet.rs  dns_query.rs  dns_record.rs  mod.rs
wifi-connect/src/http_server/: file_serve.rs  mod.rs  sse.rs
wifi-connect/src/nm/: connectivity.rs  dbus_tokio.rs  dbus_types.rs  find_wifi_device.rs  hotspot.rs  mod.rs  security.rs  utils.rs  wifi_settings.rs
wifi-connect/src/nm_dbus_generated/: access_point.rs  access_point.xml  connection.rs  connection.xml  connections.rs  generate.sh  mod.rs  systemd_service_unit.rs
wifi-connect/ui/: index.html
wifi-connect/ui/css/: custom.css
wifi-connect/ui/js/: index.js
