[package]
name = "wifi-captive"
version = "0.2.0"
authors = ["David Graeff <david.graeff@web.de>"]
description = "Wifi Setup service with captive portal. Requires the network manager DBUS API and linux NET_BINDSERVICE sys capability."
readme = "readme.md"
homepage = "https://github.com/openhab-nodes/wifi-captive-rs"
repository = "https://github.com/openhab-nodes/wifi-captive-rs"
keywords = ["network_manager", "network-manager", "networking", "Wi-Fi", "wifi"]
categories = ["api-bindings", "network-programming", "os::unix-apis"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
# General
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.101"
log = "0.4.8"
env_logger = "0.7.0"
nix = "0.15.0"
structopt = "0.3.2"

# Async
#futures-core =  { version = "^0.3.0"}
#futures-util =  { version = "^0.3.0"}
#futures-channel =  { version = "^0.3.0"}
futures-core =  { version = "^0.3.0-alpha.18", package = "futures-core-preview"}
futures-util =  { version = "^0.3.0-alpha.18", package = "futures-util-preview"}
futures-channel =  { version = "^0.3.0-alpha.18", package = "futures-channel-preview"}
tokio-net = {version="0.2.0-alpha.6",features = ["signal"]}
tokio = { version = "0.2.0-alpha.6", features = ["sync","net","signal","timer"] }
pin-utils = "0.1.0-alpha.4"

# Network manager
dbus = "^0"
mio = "0.6.19" # for dbus_tokio.rs
mio-uds = "0.6.7"
enumflags2 = "0.6.2"

# Web server
hyper = "0.13.0-alpha.4"
include_dir = {version="0.2.1",optional=true}

# Render the readme file on doc.rs
[package.metadata.docs.rs]
features = [ "external_doc", "rocket_support" ]

[patch.crates-io]
dbus = { path = './dbus-rs-2019-11-21' }
#dbus = { git = 'https://github.com/diwic/dbus-rs' }

[features]
default = ["networkmanager","includeui"]
includeui = ["include_dir"]
networkmanager = []
iwd = []

[profile.release]
lto = true

[badges]
is-it-maintained-open-issues = { repository = "openhab-nodes/wifi-captive-rs" }
is-it-maintained-issue-resolution = { repository = "openhab-nodes/wifi-captive-rs" }
maintenance = { status = "actively-developed" }
