[package]
name = "wifi-captive"
version = "0.3.0"
authors = ["David Graeff <david.graeff@web.de>"]
description = "Wifi Setup service with captive portal. Requires the network manager DBUS API and linux NET_BINDSERVICE sys capability."
readme = "readme.md"
homepage = "https://github.com/openhab-nodes/wifi-captive-rs"
repository = "https://github.com/openhab-nodes/wifi-captive-rs"
keywords = ["network_manager", "network-manager", "networking", "Wi-Fi", "wifi"]
categories = ["api-bindings", "network-programming", "os::unix-apis"]
license = "Apache-2.0"
edition = "2018"

[workspace]
members=["dbus-rs-2019-11-21"]

[dependencies]
# General
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.103"
log = "0.4.8"
env_logger = "0.7.1"
nix = "0.20.2"
structopt = "0.3.5"

futures-core = "0.3.1"
futures-util = "0.3.1"
futures-channel = "0.3.1"
tokio = { version = "0.2.4", features = ["sync","net","signal","time","io-driver","rt-core","rt-util","macros"] }
pin-project = "0.4.6"
pin-utils = "0.1.0-alpha.4"

# Network manager
#dbus = "^0.8"
dbus = { version="19.11.21", package = "dbus_copy", path="./dbus-rs-2019-11-21" }
mio = "0.6.21"
enumflags2 = "0.6.2"

# Web server
hyper = "0.13.0"
include_dir = { version = "0.4.1", optional = true }
bytes = "0.5.2"

# Render the readme file on doc.rs
[package.metadata.docs.rs]
features = [ "external_doc" ]

[features]
default = ["networkmanager","includeui"]
includeui = ["include_dir"]
networkmanager = []
iwd = []
connman = []

[profile.release]
lto = true

[badges]
is-it-maintained-open-issues = { repository = "openhab-nodes/wifi-captive-rs" }
is-it-maintained-issue-resolution = { repository = "openhab-nodes/wifi-captive-rs" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
tempfile = "3.1.0"
