[package]
name = "wifi-captive"
version = "4.3.0"
authors = ["Zahari Petkov <zahari@balena.io>", "Aaron Brodersen <aaron@resin.io>", "David Graeff <david.graeff@web.de>"]
description = "Wifi Setup service with captive portal. Requires the network manager DBUS API and linux NET_BINDSERVICE sys capability."
homepage = "https://github.com/openhab-nodes/ohx-os/wifi-connect"
repository = "https://github.com/openhab-nodes/ohx-os"
keywords = ["network_manager", "network-manager", "networking", "Wi-Fi", "wifi"]
categories = ["api-bindings", "network-programming", "os::unix-apis"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
log = "0.3"
env_logger = "^0.4"
nix = "^0"

bitflags = "^1"
ascii = "^0"
bitintr = "0.2.0"
structopt = "0.3.2"
failure = "0.1.5"

dbus = "^0"
dbus-tokio = { version ="^0", features = ["nightly"] }
futures = { version = "^0.3.0-alpha.18", package = "futures-preview", features = ["compat"] }
futures-util =  { version = "^0.3.0-alpha.18", package = "futures-util-preview"}
futures-channel =  { version = "^0.3.0-alpha.18", package = "futures-channel-preview"}
tokio-net = "0.2.0-alpha.4"
tokio-timer = "0.3.0-alpha.4"
tokio = { version="0.2.0-alpha.4", features = ["sync"]}
stream-cancel = "0.4.4"
pin-utils = "0.1.0-alpha.4"

# For dhcp server
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
net2 = "0.2.33"

# Web server
hyper = "0.13.0-alpha.1"
mime_guess = "2.0.1"
include_dir = "0.2.1"
chrono = "0.4.9"

[patch.crates-io]
dbus = { git = 'https://github.com/diwic/dbus-rs' }

[features]
default = []
includeui = []

[profile.release]
lto = true

